--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,7 @@ services:
     depends_on:
       - sa-apollo-api
     ports:
-      - "80:80"
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.scheduler.affinity:host_label_ne: type=ranche-node-news.c.proyecto-arquisoft.internal
+      - "80:80"    
   sa-apollo-api:
     image: menoguera/sa_apollo_api
     environment:
@@ -19,81 +16,50 @@ services:
       NEWSLETTER_PORT: '3002'
       PORT: '5000'
       SHOW_URLS: 'true'
-      URL: '35.231.237.201'
+      URL: '35.229.96.221'
       USER_ENTRY: 'api/auth'
       USER_PORT: '3003'
-      labels:
-      io.rancher.container.pull_image: always
-      io.rancher.scheduler.affinity:host_label_ne: type=ranche-node-news.c.proyecto-arquisoft.internal
-  sa-bot-db:
-    image: mongo
     ports:
-      - "27017:27017"
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.scheduler.affinity:host_label_ne: type=ranche-node-news.c.proyecto-arquisoft.internal
-  sa-bot-ms:
-    image: diefrodriguezcha/sa_bot_ms
-    links:
-      - sa-bot-db
-    ports:
-      - "3000:3000"
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.scheduler.affinity:host_label_ne: type=ranche-node-news.c.proyecto-arquisoft.internal
-  sa-users-ms:
+      -"5000:5000"
+    depends_on:
+      - sa-user-ms
+      - sa-centers-ms
+      - sa-news-ms    
+  sa-user-ms:
     image: diefrodriguezcha/sa_user_ms
     environment:
       DOCKER_DEPLOY: 'true'
       PORT: '3003'
       SECRET: 'arquisoft'
+      DATABASE: '27018'
     links:
-    - sa-user-db
-    ports:
-    - "3003:3003"
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.scheduler.affinity:host_label_ne: type=ranche-node-news.c.proyecto-arquisoft.internal
+    - sa-user-db        
   sa-user-db:
     image: mongo
     ports:
-    - "27018:27018"
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.scheduler.affinity:host_label_ne: type=ranche-node-news.c.proyecto-arquisoft.internal
+    - 27018:27018    
   sa-centers-db:
     image: mysql:5.7
     environment:
       MYSQL_DATABASE: sa-centers-db
       MYSQL_PASSWORD: '123'
       MYSQL_ROOT_PASSWORD: '123'
-      MYSQL_USER: sa
+      MYSQL_USER: sa    
     ports:
-    - 3307:3306/tcp
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.scheduler.affinity:host_label_ne: type=ranche-node-news.c.proyecto-arquisoft.internal
+      - "3307:3307"    
   sa-centers-ms:
     image: dulfrey/sa_centers_ms
     links:
-    - sa-centers-db:sa-centers-db
-    ports:
-    - 3001:3000/tcp
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.scheduler.affinity:host_label_ne: type=ranche-node-news.c.proyecto-arquisoft.internal
+    - sa-centers-db:sa-centers-db            
   sa-news-db:
     image: mysql:5.7
     environment:
       MYSQL_DATABASE: railsapp
       MYSQL_PASSWORD: password
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_USER: appuser
+      MYSQL_USER: appuser    
     ports:
-    - 3306:3306/tcp
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.scheduler.affinity:host_label_ne: type=ranche-node-news.c.proyecto-arquisoft.internal
+      - "3306:3306"    
   sa-news-ms:
     image: menoguera/newsletter-api
     environment:
@@ -104,9 +70,4 @@ services:
     volumes:
     - ./railsapp
     links:
-    - sa-news-db:sa-news-db
-    ports:
-    - 3002:3000/tcp
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.scheduler.affinity:host_label_ne: type=ranche-node-news.c.proyecto-arquisoft.internal
+    - sa-news-db:sa-news-db            
